# biodivine-hctl-model-checker

./: .gitignore  .releasenotes.yml  Cargo.toml  LICENSE  README.md  benchmark_attractors_tools.txt  benchmark_formulae.txt  benchmark_formulas.txt  benchmark_times.txt  booleannet_to_bnet.py  create_attractor_formula.py  idk.txt
.github/workflows/: build.yml  release.yml
benchmark_models/: EMT.bnet  benchmark_times_attractors.txt  phase_switch.bnet
benchmark_models/classification/mapk1/: assertions.txt  formulae.txt  properties.txt  sketch.aeon
benchmark_models/classification/mapk1/results/: bdd_dump_0010.txt  bdd_dump_0100.txt  bdd_dump_0110.txt  bdd_dump_0111.txt  bdd_dump_1001.txt  bdd_dump_1010.txt  report.txt
benchmark_models/classification/mapk2/: formulae.txt  sketch.aeon
benchmark_models/classification/tlgl/: assertions.txt  formulae.txt  properties.txt  sketch.aeon
benchmark_models/classification/tlgl/results/: bdd_dump_0000.txt  bdd_dump_0110.txt  bdd_dump_1010.txt  report.txt
benchmark_models/experiment-classification/: assertions.txt  properties.txt
benchmark_models/experiment-classification/results/: bdd_dump_0011.txt  report.txt
benchmark_models/griffin-models/: README.md  griffin_model1.aeon
benchmark_models/inference-benchmarks/: README.md
benchmark_models/inference/115/: 115.txt
benchmark_models/inference/115_35v/: 115_parametrized.aeon
benchmark_models/inference/124/: results.txt
benchmark_models/large-colored-models/: README.md
benchmark_models/pystablemotifs/: EMT.aeon
benchmark_models/pystablemotifs-models/: README.md
benchmark_models/sketches-example/: formulae.txt  model-example-sketches.aeon
src/: analysis.rs  compute_scc.rs  evaluator.rs  generate_output.rs  implementation.rs  implementation_components.rs  infer_networks.rs  inference_aeon.rs  io.rs  lib.rs  load_inputs.rs  main.rs  mc_utils.rs  model_checking.rs  operation_enums.rs  parser.rs  print_results.rs  result_print.rs  tokenizer.rs
src/_aeon_algorithms/: algo_xie_beerel.rs  saturated_reachability.rs  scc_computation.rs
src/_aeon_algorithms/itgr/: _impl_extended_component_process.rs  _impl_fwd_bwd_process.rs  _impl_reachable_process.rs  _impl_scheduler.rs  mod.rs
src/_test_model_checking/: _test_against_precomputed.rs  _test_extended_formulae.rs  _test_formula_equivalences.rs  _test_pattern_equivalences.rs  _test_unsafe_optimization.rs  _test_util.rs  _test_variable_domains.rs  mod.rs
src/aeon/: algo_xie_beerel.rs  mod.rs  saturated_reachability.rs  scc_computation.rs
src/aeon/itgr/: _impl_extended_component_process.rs  _impl_fwd_bwd_process.rs  _impl_reachable_process.rs  _impl_scheduler.rs  mod.rs
src/bn_classification/: generate_output.rs  load_input.rs  mod.rs  write_output.rs
src/evaluation/: algorithm.rs  canonization.rs  eval_context.rs  eval_info.rs  hctl_operators_eval.rs  hctl_operators_evaluation.rs  low_level_operations.rs  mark_duplicate_subform.rs  mark_duplicates.rs  mod.rs  sanitizing.rs
src/formula_evaluation/: algorithm.rs  canonization.rs  eval_hctl_components.rs  eval_info.rs  eval_utils.rs  hctl_operators_evaluation.rs  mark_duplicate_subform.rs  mod.rs
src/formula_preprocessing/: mod.rs  node.rs  operation_enums.rs  parser.rs  read_inputs.rs  rename_vars.rs  tokenizer.rs  vars_props_manipulation.rs
src/inference/: attractor_inference.rs  inference_formulae.rs  utils.rs
src/postprocessing/: mod.rs  sanitizing.rs
src/preprocessing/: hctl_tree.rs  mod.rs  node.rs  operator_enums.rs  parser.rs  read_inputs.rs  tokenizer.rs  utils.rs
test/: formulas-easy.txt  formulas-normal.txt
