[package]
name = "biodivine-hctl-model-checker"
version = "0.3.3"
authors = ["Ondřej Huvar <xhuvar@fi.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>"]
edition = "2024"
description = "Library for symbolic HCTL model checking on partially defined Boolean networks."
documentation = "https://docs.rs/biodivine-hctl-model-checker/latest/"
homepage = "https://github.com/sybila/biodivine-hctl-model-checker"
repository = "https://github.com/sybila/biodivine-hctl-model-checker"
readme = "README.md"
keywords = ["hctl", "model-checking", "boolean-network", "symbolic", "systems-biology"]
categories = ["science", "simulation"]
license = "MIT"
# If you are increasing this, update it in both CI workflows.
rust-version = "1.88.0"
exclude = ["benchmark_models", ".github", ".githooks"]

[profile.test]
opt-level = 3 # to be able to run non-trivial tests

[[bin]]
name = "hctl-model-checker"
path = "src/main.rs"

[[bin]]
name = "convert-aeon-to-bnet"
path = "src/bin/convert_aeon_to_bnet.rs"

[dependencies]
biodivine-lib-bdd = ">=0.6.1, <1.0.0"
biodivine-lib-param-bn = ">=0.6.1, <1.0.0"
clap = { version = "4.5", features = ["derive"] }
# `rand` cannot be updated because `lib-bdd` uses it to generate random `big-int` values
# and this is not yet supported for `0.9` or newer.
rand = "0.8"
termcolor = "1.4"
zip = "0.6"
